# nova-act

./: FAQ.md  README.md  README_JP.md  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt
.github/workflows/: issue-to-slack.yml
scripts/: generate_sync.py
src/nova_act/: __init__.py  __version__.py  nova_act.py
src/nova_act/asyncio/: __init__.py  nova_act.py
src/nova_act/asyncio/impl/: dispatcher.py
src/nova_act/asyncio/types/: hooks.py
src/nova_act/browser_auth/: __init__.py  agentcore_session_provider.py  browser_cookie_provider.py  browser_session_provider.py  local_file_session_provider.py  s3_session_provider.py
src/nova_act/cli/: CODEBASE.md  README.md  cli.py  group.py
src/nova_act/cli/browser/: README.md  __init__.py  config_schema.json  types.py
src/nova_act/cli/core/: cli_stdout.py  config.py  constants.py  error_detection.py  exceptions.py  json_output.py  locking.py  nova_args.py  output.py  process.py  region.py  state_manager.py  styling.py  user_config_manager.py
src/nova_act/cli/workflow/: workflow_deployer.py  workflow_manager.py
src/nova_act/impl/: common.py  dispatcher.py  inputs.py  interpreter.py  playwright.py  run_info_compiler.py  thinker.py
src/nova_act/impl/backends/: base.py  common.py  factory.py  helios.py  sunburst.py  sunshine.py
src/nova_act/impl/program/: base.py  runner.py
src/nova_act/samples/: README.md  apartments_caltrain.py  apartments_caltrain_walking.py  apartments_zumper.py  async_planet_distances.py  bypass_captcha.py  price_comparison.py  sap_master_customer_data_management.py  search_apartments_calculate_commute.py  use_bedrock_agentcore_browser.py
src/nova_act/tools/: compatibility.py
src/nova_act/types/: act_errors.py  act_metadata.py  act_result.py  errors.py  features.py  hooks.py  workflow.py
src/nova_act/types/api/: step.py
src/nova_act/util/: argument_preparation.py  constants.py  decode_string.py  error_messages.py  jsonschema.py  logging.py  os_path.py  path_validator.py  s3_writer.py  url.py
(+176 files in other folders)
