[build-system]
requires = [
  "build",
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nova-act"
description = "A Python SDK for Amazon Nova Act."
dynamic = ["dependencies", "version"]
requires-python = ">=3.10"
authors = [
  {name = "Amazon Nova Act", email="nova-act@amazon.com"},
]
license = "Apache-2.0"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "build",
  "setuptools",
  "twine",
  "wheel",
  "mypy",
  "boto3-stubs",
]

[tool.setuptools.dynamic]
version = {attr = "nova_act.__version__.VERSION"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
nova_act = ["artifacts/**/*", "artifacts/*"]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_explicit = true
plugins = [
    "pydantic.mypy"
]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true