[build-system]
requires = [
  "build",
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nova-act"
description = "A Python SDK for Amazon Nova Act."
dynamic = ["dependencies", "version", "optional-dependencies"]
requires-python = ">=3.10"
authors = [
  {name = "Amazon Nova Act", email="nova-act@amazon.com"},
]
license = "Apache-2.0"
readme = "README.md"

[project.scripts]
act = "nova_act.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "nova_act.__version__.VERSION"}
dependencies = {file = "requirements.txt"}
optional-dependencies.dev = {file = "requirements-dev.txt"}
optional-dependencies.cli = {file = "requirements-cli.txt"}

[tool.setuptools.package-data]
nova_act = ["cli/workflow/services/*/templates/*"]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_explicit = true
exclude = [
    "src/nova_act/cli/workflow/services/agentcore/templates/*",
]
plugins = [
    "pydantic.mypy"
]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true